# java-patterns

./: .DEREK.yml  .alexignore  .alexrc.js  .all-contributorsrc  .all-membersrc  .all-sponsorsrc  .codeclimate.yml  .crowdin.bak  .dockerignore  .editorconfig  .env  .env.example  .env.json  .git-blame-ignore-revs  .gitattributes  .gitbook.yaml  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .htmltest.external.yml  .htmltest.yml  .imgbotconfig  .jsbeautifyrc  .jscsrc  .jshintrc  .kodiak.toml  .lintstagedrc.json  .ls-lint.yml  .markdownlint.yml  .markdownlintignore  .mention-bot  .mergify.yml  .ncurc.json  .nodemonignore  .npmrc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .prettierrc.yaml  .pullapprove.yml  (+105 more)
 .codesandbox/: ci.json
.changeset/: config.json
.codesandbox/: ci.json
.dependabot/: config.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  STYLEGUIDE.md  auto-comment.yml  auto-label.yml  auto-merge.yml  auto_assign.yml  begin-community-code-of-conduct.md  community-code-of-conduct.md  confidentiality-agreement.md  config.yml  dependabot.yml  eslint-disable-bot.yml  first-timers-issue-template.md  first-timers.yml  gitpod.yml  labeler.yml  labels.json  lock.yml  mergeable.yml  privacy-policy.md  settings.yml  stale.yml  support.yml
.husky/: post-checkout  post-commit  post-merge  pre-commit  pre-push  prepare-commit-msg
.license/: dependency_decisions.yml
.space/: dev-env-warmup.sh  webstorm.devfile.yml
.theia/: settings.json
CHANGELOG/: index.html
CONTRIBUTING/: index.html
GUIDE/: index.html
SUMMARY/: index.html
adr/: index.html
adrs/: 0001-record-architecture-decisions.md  0002-no-integration-test.md
aux/: tags.md
charts/: Chart.yaml  OWNERS  README.md  values.yaml
charts2/: Chart.yaml  README.md  values-prod.yaml.bak
cla/: README.md
config/: config.json  config.yml
contributing/: DEVELOPERS.md  index.html  info.html  info.md
docs/: CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  README.md  SUMMARY.md  _config.yml  book.json  contributors.html  contributors.json  hooks.py  requirements.txt  requirements_frozen.txt
en/: SUMMARY.html  _config.yml  index.html  requirements.txt
helm/: README.md  deploy-with-ingress.md  values.yaml
hooks/: pre-commit.js
java_patterns.egg-info/: PKG-INFO  SOURCES.txt
k8s/: README.md  deployment.yaml  kind.sh  service.yaml
links/: index.html  info.html  info.md
makefiles/: checks.mk  common.mk  defaults.mk
okteto/: deployment.yaml
patterns/: facade.txt  index.html  prototype.txt  proxy.txt  snippet-template.html  state.txt
policy/: deny.rego  kubernetes.rego  rules.rego  violation.rego  warn.rego
reporting/: _config.yml  bug_report.html  (+9 more)
(+689 files in other folders)
