[metadata]
name = java-patterns
url = https://github.com/AlexRogalskiy/java-patterns
project_urls =
  Source = https://github.com/AlexRogalskiy/java-patterns
  Issues = https://github.com/AlexRogalskiy/java-patterns/issues/
description = Java Design Patterns Documentation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: Production/Stable,
  Operating System :: OS Independent
  Programming Language :: Python
  License :: OSI Approved :: GPL-3.0 License
  Intended Audience :: Developers
  Natural Language :: English
  Topic :: Utilities
platforms = any
license = GPL-3.0

[options]
python_requires = >= 3.9

[bumpversion]
current_version = 1.0.1
commit = True
tag = True

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[bumpversion:file:setup.py]
search = VERSION = "{current_version}"
replace = VERSION = "{new_version}"

[requirements:Python 3]
python = 3.9
include_names = local

[requirements:Python 3 hash]
python = 3.9
include_names = local
add_hashes = local
in_ext = txt
out_ext = hash

[pycodestyle]
max-line-length = 120
